# ANAPSID

./: .envrc  .gitignore  pyproject.toml  requirements.txt
ANAPSID/AnapsidOperators/: Xfilter.py  Xgjoin.py  Xgoptional.py  Xnjoin.py  Xnoptional.py  Xorderby.py  Xunion.py
ANAPSID/BlockingOperators/: HashJoin.py  HashOptional.py  NestedLoopJoin.py  NestedLoopOptional.py
ANAPSID/Decomposer/: Tree.py  decomposer.py  parseQuery.py  parseQuery1_1.py  parsetab.py  services.py  utils.py
ANAPSID/NonBlockingOperators/: NestedHashJoin.py  NestedHashJoinFilter.py  NestedHashOptional.py  NestedHashOptionalFilter.py  OperatorStructures.py  SymmetricHashJoin.py  XJoin.py
ANAPSID/Operators/: Join.py  Optional.py  Union.py
ANAPSID/Planner/: AdaptivePlan.py  BlockingPlan.py  BlockingPlanSimulator.py  Plan.py  PlanOLD.py  PlanPIDS.py
endpoints/: endpointsDescriptions.txt  endpointsURLs.txt
example/: parsetab.py
queries/: test.sparql
scripts/: get_predicates  run_anapsid
