[tool.poetry]
name = "anapsid"
version = "1.0"
authors = [
    "Simón Castillo <scastillo@ldc.usb.ve>", 
    "Guillermo Palma <gpalma@ldc.usb.ve>", 
    "Maria-Esther Vidal <mvidal@ldc.usb.ve>",
    "Gabriela Montoya <gabriela.montoya@univ-nantes.fr>",
    "Maribel Acosta <maribel.acosta@kit.edu>"
]
description = "ANAPSID: An adaptive query processing engine for SPARQL endpoints"
readme = "README.md"
packages = [
  { include = "ANAPSID" }
]
include = [ "README.md" ]
exclude = [ "tests" ]

[tool.poetry.scripts]
get-predicate = "scripts.get_predicates:main"
run-anapsid= "scipts.run_anapsid:main"

[tool.poetry.dependencies]
ply = "3.4"
pathlib = "1.0.1"  
sparqlwrapper = "1.8.5"
python = "2.7.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"